fix checkbox alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -99,7 +99,7 @@ h3, h4 {
 label {
   display: inline-block;
   max-width: 100%;
-  margin-bottom: 10px;
+  padding: 5px;
   font-weight: bold;
 }
 
